# openapi.json
@@ -144,6 +144,94 @@
         }
       }
     },
+    "/stock/": {
+      "get": {
+        "tags": [
+          "Blood Stock"
+        ],
+        "summary": "Get Stock",
+        "operationId": "get_stock_stock__get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/BloodStockDTO"
+                  },
+                  "type": "array",
+                  "title": "Response Get Stock Stock  Get"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/stock/sync": {
+      "post": {
+        "tags": [
+          "Blood Stock"
+        ],
+        "summary": "Sync Stock",
+        "operationId": "sync_stock_stock_sync_post",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        }
+      }
+    },
+    "/notifications/send-alerts": {
+      "post": {
+        "tags": [
+          "Notifications"
+        ],
+        "summary": "Trigger Notifications",
+        "operationId": "trigger_notifications_notifications_send_alerts_post",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        }
+      }
+    },
+    "/notifications/history": {
+      "get": {
+        "tags": [
+          "Notifications"
+        ],
+        "summary": "Get History",
+        "operationId": "get_history_notifications_history_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/NotificationLogDTO"
+                  },
+                  "type": "array",
+                  "title": "Response Get History Notifications History Get"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/": {
       "get": {
         "summary": "Read Root",
@@ -163,6 +251,28 @@
   },
   "components": {
     "schemas": {
+      "BloodStockDTO": {
+        "properties": {
+          "blood_type": {
+            "$ref": "#/components/schemas/BloodType"
+          },
+          "status": {
+            "$ref": "#/components/schemas/StockStatus"
+          },
+          "last_updated": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Last Updated"
+          }
+        },
+        "type": "object",
+        "required": [
+          "blood_type",
+          "status",
+          "last_updated"
+        ],
+        "title": "BloodStockDTO"
+      },
       "BloodType": {
         "type": "string",
         "enum": [
@@ -240,6 +350,48 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
+      },
+      "NotificationLogDTO": {
+        "properties": {
+          "id": {
+            "type": "string",
+            "title": "Id"
+          },
+          "recipient_email": {
+            "type": "string",
+            "title": "Recipient Email"
+          },
+          "blood_type": {
+            "$ref": "#/components/schemas/BloodType"
+          },
+          "status_at_time": {
+            "$ref": "#/components/schemas/StockStatus"
+          },
+          "sent_at": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Sent At"
+          }
+        },
+        "type": "object",
+        "required": [
+          "id",
+          "recipient_email",
+          "blood_type",
+          "status_at_time",
+          "sent_at"
+        ],
+        "title": "NotificationLogDTO"
+      },
+      "StockStatus": {
+        "type": "string",
+        "enum": [
+          "Critical",
+          "Alert",
+          "Low",
+          "Stable"
+        ],
+        "title": "StockStatus"
       },
       "ValidationError": {
         "properties": {
